# gen-model

./: .gitignore  .pre-commit-config.yaml  Makefile  mkdocs.yml  pyproject.toml
model_gen/: _base.py
tests/djapp/djapp/: settings.py
